<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/authLayout"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/black"
        android:background="@color/red_logo"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- <ImageView
            android:layout_width="363dp"
            android:layout_height="90dp"
            android:layout_margin="15dp"
            android:src="@drawable/misiontic" />-->

        <ImageView
            android:layout_width="135dp"
            android:layout_height="76dp"
            android:layout_margin="5dp"
            android:src="@drawable/bblogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_username"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email@example.com"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/text_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="10dp"
            android:onClick="onLogin"
            android:textColor="@color/red_logo"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="10dp"
            android:onClick="onRegister"
            android:textColor="@color/red_logo"
            android:text="Register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRegisterEmail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="onRegisterEmail"
                android:textColor="@color/red_logo"
                android:text="@string/regemail" />

            <Button
                android:id="@+id/btnLoginEmail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="onLoginEmail"
                android:textColor="@color/red_logo"
                android:text="LogIn EMAIL" />

        </LinearLayout>
        <TextView
            android:id="@+id/txtViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="I forgot the password"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:background="@color/red_logo"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>




